src/objects/Auction_Item__c.object
<CustomObject>
    <description>A purchaseable item at an auction, such as a weekend getaway, a food basket, a certificate for free exercise classes.</description>
    <fields>
        <fullName>Allow_Multiple_Purchases__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want the Auction Purchases page to allow this item to be purchased multiple times.</inlineHelpText>
        <label>Allow Multiple Purchases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auction_Group__c</fullName>
        <inlineHelpText>The auction group this auction item is offered in.</inlineHelpText>
        <label>Auction Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Live round 1</fullName>
                </value>
                <value>
                    <fullName>Live round 2</fullName>
                </value>
                <value>
                    <fullName>Silent round 1</fullName>
                </value>
                <value>
                    <fullName>Silent round 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auction_Item_Name__c</fullName>
        <inlineHelpText>The short name for the auction item.</inlineHelpText>
        <label>Auction Item Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The auction this item is for.</inlineHelpText>
        <label>Auction</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Auction Items</relationshipLabel>
        <relationshipName>Auction_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Excursions</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage</fullName>
                </value>
                <value>
                    <fullName>Home and Garden</fullName>
                </value>
                <value>
                    <fullName>Sporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>The full description of the item to use in the marketing of the item (booklet, placards, etc.)</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Board__c</fullName>
        <inlineHelpText>Does this auction item require a display board to be created for it?</inlineHelpText>
        <label>Display Board</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>n/a</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donor_Recognition__c</fullName>
        <inlineHelpText>The donors that you want to recognize for this auction item in the marketing of this item.</inlineHelpText>
        <label>Donor Recognition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FMV_Override__c</fullName>
        <inlineHelpText>If empty, the sum of the Actual FMV&apos;s of all pieces will be used.</inlineHelpText>
        <label>FMV Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FMV_Rollup__c</fullName>
        <inlineHelpText>The FMV of all of the pieces added together</inlineHelpText>
        <label>FMV Rollup</label>
        <summarizedField>Auction_Item_Piece__c.Actual_FMV__c</summarizedField>
        <summaryForeignKey>Auction_Item_Piece__c.Auction_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value__c</fullName>
        <formula>IF(FMV_Override__c &gt; 0, FMV_Override__c, FMV_Rollup__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Fair Market Value of the auction item.</inlineHelpText>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Bid__c</fullName>
        <inlineHelpText>The amount that guarantees the bidder this auction item.</inlineHelpText>
        <label>Guaranteed Bid</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Bid__c</fullName>
        <inlineHelpText>The minimum bid to accept for this auction item.</inlineHelpText>
        <label>Minimum Bid</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Restrictions__c</fullName>
        <inlineHelpText>Any restrictions on the donated item, like when it is not available.</inlineHelpText>
        <label>Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Treat_Purchase_as_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, create any purchase opportunity as record type &quot;Gift&quot;, not &quot;Auction Item Purchase&quot;.</inlineHelpText>
        <label>Treat Purchase as Gift</label>
        <type>Checkbox</type>
    </fields>
    <label>Auction Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Auction Item ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auction Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>